--- a/home.html
+++ b/home.html
@@ -841,7 +841,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-3">
-                            <h2 class="script">Spectrum</h2>
+                            <span class="footer-logo">
+                                <img src="assets/img/logo.png" alt="">
+                            </span>
                             <address>
                                 <strong>Twitter, Inc.</strong>
                                 <br>795 Folsom Ave, Suite 600
